[project]
name = "awesome-exams-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.7",
    "jupyterlab-language-pack-zh-cn>=4.5.post3",
    "jupyterlab-server>=2.28.0",
    "jupyterlite-core>=0.7.6",
    "jupyterlite-pyodide-kernel>=0.7.2",
    "notebook>=7.5.6",
]

# do not install them to the lib, it will import dirty extensions into dist
[dependency-groups]
dev = [
    "cursor-notebook-mcp==0.3.1",
    "pydantic==2.11.7", # cursor-notebook-mcp do not work with pydantic 2.12.0+
]

[tool.uv]
override-dependencies = [
    "fastmcp>=3.2.0",
]